gcc/testsuite/gdc.test/runnable/imports/test57b.d
module imports.test57b;
class C(T) { struct X {} }
