gcc/testsuite/gdc.test/fail_compilation/imports/a14235.d
module imports.a14235;

struct SomeThing(T...)
{
}

class SomeClass {}
